# evadex

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  evasion_ai.py  interceptor.py  main.py  missile.py  missile_env.py  mkdocs.yml  pyproject.toml  requirements.txt  rl_agent.py  setup.sh  train_rl.py  visualize_3d.py  visualize_3d_dwa.py  visualize_3d_dwa_random.py  visualize_3d_dwa_random_delay.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs-deploy.yml  release.yml
docs/: development.md  index.md  robots.txt  scenarios.md  usage.md
evadex/: cli.py  config.py  env.py  evasion_ai.py  interceptor.py  missile.py  planners.py  rl_agent.py  sim2d.py  telemetry.py
examples/: benchmark_planners.py  visualize_3d.py  visualize_3d_dwa.py  visualize_3d_dwa_random.py  visualize_3d_dwa_random_delay.py
scenarios/: sample_scenario.json
scenarios/benchmarks/: easy.json  hard.json  medium.json
tests/: test_models.py  test_sim_smoke.py
