 [build-system]
 requires = ["hatchling>=1.25.0"]
 build-backend = "hatchling.build"

[project]
name = "evadex"
dynamic = ["version"]
description = "EvadeX: educational 2D/3D evasion simulation and RL environment"
 readme = "README.md"
 requires-python = ">=3.10"
 authors = [{ name = "EvadeX Contributors" }]
 classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
]
dependencies = [
   "numpy>=1.24",
   "matplotlib>=3.7",
]

 [project.optional-dependencies]
 rl = [
   "stable-baselines3>=2.2.0",
   "gym>=0.26,<0.27",
 ]
dev = [
   "pytest>=7.4",
   "ruff>=0.5.0",
   "black>=24.1.0",
]
 docs = [
   "mkdocs>=1.6.0",
   "mkdocs-material>=9.5.0",
 ]

[project.scripts]
evadex-sim = "evadex.cli:main"
evadex-telemetry = "evadex.telemetry:main"

 [tool.hatch.version]
 path = "evadex/__init__.py"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

 [tool.black]
 line-length = 100
 target-version = ["py310"]
